// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableHead > Style tests > should render with default styles 1`] = `
.circuit-1 {
  vertical-align: middle;
}

tbody .circuit-1:last-child th,
tbody .circuit-1:last-child td {
  border-bottom: none;
}

.circuit-2 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-subtle);
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-2:focus-within::after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-2:focus-within::after::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus-within,
.circuit-2:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-accent-hovered);
}

.circuit-2:focus-within>button,
.circuit-2:hover>button {
  opacity: 1;
}

.circuit-2:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-accent-pressed);
}

.circuit-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 36px;
  width: 24px;
  position: absolute;
  left: 0;
  top: 50%;
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  color: var(--cui-fg-accent);
  border: 0;
  background: none;
  outline: 0;
  padding: 2px 4px;
  margin: 0;
  cursor: pointer;
}

.circuit-3:focus {
  opacity: 1;
}

.circuit-3:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4 {
  margin: -2px 0;
}

.circuit-6 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-7 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-subtle);
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  white-space: nowrap;
}

<thead
  class="circuit-0"
>
  <tr
    class="circuit-1"
  >
    <th
      aria-label="Sort in ascending order"
      aria-sort="none"
      class="circuit-2"
      scope="col"
    >
      <button
        class="circuit-3"
        role="button"
        title="Sort in ascending order"
      >
        <svg
          class="circuit-4"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="circuit-4"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
            fill="currentColor"
          />
        </svg>
        <span
          class="circuit-6"
        >
          Sort in ascending order
        </span>
      </button>
      Foo
    </th>
    <th
      class="circuit-7"
      scope="col"
    >
      Bar
    </th>
    <th
      class="circuit-7"
      scope="col"
    >
      Baz
    </th>
  </tr>
</thead>
`;

exports[`TableHead > Style tests > should render with rowHeader styles 1`] = `
.circuit-1 {
  vertical-align: middle;
}

tbody .circuit-1:last-child th,
tbody .circuit-1:last-child td {
  border-bottom: none;
}

.circuit-2 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-subtle);
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (max-width: 767px) {
  .circuit-2 {
    left: 0;
    position: -webkit-sticky;
    position: sticky;
    width: 145px;
    overflow-wrap: break-word;
    z-index: 1;
  }

  .circuit-2:after {
    content: '';
    background: linear-gradient(
              90deg,
              rgba(0, 0, 0, 0.12),
              rgba(255, 255, 255, 0)
            );
    height: 100%;
    position: absolute;
    top: 0;
    left: 100%;
    width: 6px;
  }
}

.circuit-2:focus-within::after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-2:focus-within::after::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus-within,
.circuit-2:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-accent-hovered);
}

.circuit-2:focus-within>button,
.circuit-2:hover>button {
  opacity: 1;
}

.circuit-2:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-accent-pressed);
}

.circuit-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 36px;
  width: 24px;
  position: absolute;
  left: 0;
  top: 50%;
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  color: var(--cui-fg-accent);
  border: 0;
  background: none;
  outline: 0;
  padding: 2px 4px;
  margin: 0;
  cursor: pointer;
}

.circuit-3:focus {
  opacity: 1;
}

.circuit-3:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4 {
  margin: -2px 0;
}

.circuit-6 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-7 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-subtle);
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  white-space: nowrap;
}

<thead
  class="circuit-0"
>
  <tr
    class="circuit-1"
  >
    <th
      aria-label="Sort in ascending order"
      aria-sort="none"
      class="circuit-2"
      scope="col"
    >
      <button
        class="circuit-3"
        role="button"
        title="Sort in ascending order"
      >
        <svg
          class="circuit-4"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="circuit-4"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
            fill="currentColor"
          />
        </svg>
        <span
          class="circuit-6"
        >
          Sort in ascending order
        </span>
      </button>
      Foo
    </th>
    <th
      class="circuit-7"
      scope="col"
    >
      Bar
    </th>
    <th
      class="circuit-7"
      scope="col"
    >
      Baz
    </th>
  </tr>
</thead>
`;
